# rDl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bench  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.cuda.source  Makefile  README.md  ROADMAP.md  docker-compose.yml  download-libtorch.sh  fdl  fdl.yml.example  init.sh
.github/workflows/: ci.yml  pages.yml  release-cli.yml
benchmarks/: Cargo.toml  bench-publish.ps1  run.sh
benchmarks/python/: compare.py  harness.py  run_all.py
benchmarks/src/: harness.rs  main.rs
ddp-bench/: Cargo.toml  fdl.yml.example  findings-2026-04-11.md  report.md  run.sh
ddp-bench/baselines/: baseline.json
ddp-bench/src/: analyze.rs  config.rs  data.rs  download.rs  harness.rs  main.rs  report.rs
docs/: benchmark.md  cli.md  ddp.md  pytorch_migration.md  troubleshooting.md
docs/design/: graph-tree.md  roadmap.md  run-config.md  trajectory-thesis.md
docs/tutorials/: 00-rust-primer.md  01-tensors.md  02-autograd.md  03-modules.md  04-training.md  05-graph-builder.md  06-advanced-graphs.md  07-visualization.md  08-utilities.md  09-monitor.md  10-graph-tree.md  11-multi-gpu.md  12-async-ddp.md  13-data-loading.md
flodl/: Cargo.toml
flodl-cli/: Cargo.toml  README.md
flodl-cli-macros/: Cargo.toml
flodl-cli-macros/src/: lib.rs
flodl-cli/src/: api_ref.rs  (+11 more)
flodl-sys/: Cargo.toml  README.md  build.rs  shim.cpp  shim.h
flodl-sys/src/: lib.rs
rdl/: Cargo.toml
rdl-sys/: Cargo.toml  build.rs  shim.cpp  shim.h
site/: CNAME  _config.yml  benchmark.html  build_guide.py  index.html  thesis.md
(+425 files in other folders)
