[package]
name = "flodl-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Raw FFI bindings to libtorch via a thin C++ shim"
keywords = ["deep-learning", "libtorch", "ffi"]
categories = ["external-ffi-bindings", "science"]
readme = "README.md"

[features]
default = []
cuda = []

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
# Prevent docs.rs from trying to link (no libtorch in sandbox).
# The extern block is gated behind #[cfg(not(docsrs))].
no-default-features = true

[build-dependencies]
cc = "1"
